--- a/style.css
+++ b/style.css
@@ -7,10 +7,17 @@
 body {
     background-color: #333;
     color: white;
+}
+
+main {
+    font-family: "Playwrite HU", cursive, Arial;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 4px 20px;
+    margin-bottom: 50px;
 }
 
 .container {
@@ -18,4 +25,52 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-color: white;
+}
+
+h1 {
+    font-size: 40px;
+    text-align: center;
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+.controls {
+    font-family: 'Roboto', Arial, sans-serif;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    gap: 8px;
+    margin-bottom: 20px;
+}
+
+.controls .submit {
+    font-family: inherit;
+    padding: 5px 10px;
+    font-size: inherit;
+    cursor: pointer;
+}
+
+.controls .amount {
+    font-family: inherit;
+    font-size: inherit;
+    padding-left: 8px;
+    width: 120px;
+}
+
+.controls .color {
+    align-self: center;
+    height: 36px;
+    width: 64px;
+    cursor: pointer;
+}
+
+footer {
+    position: fixed;
+    opacity: 0.5;
+    bottom: 0;
+    width: 100%;
+    background-color: #000;
+    padding: 8px;
+    padding-left: 16px;
 }
