--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
     margin-bottom: 20px;
 }
 
-.controls .submit {
+button {
     font-family: inherit;
     padding: 5px 10px;
     font-size: inherit;
